--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -37,42 +37,9 @@ jobs:
           poetry run pytest tests/unit/ -v
         env:
           PYTHONPATH: ./src
-
-  test-integration:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        pipeline: ["geospatial-pipeline"]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Cache Poetry Dependencies
-        uses: actions/cache@v3
-        with:
-          path: ./pipelines/${{ matrix.pipeline }}/.venv
-          key: ${{ runner.os }}-poetry-${{ matrix.pipeline }}-${{ hashFiles('./pipelines/${{ matrix.pipeline }}/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-${{ matrix.pipeline }}-
-      - name: Install Poetry
-        run: |
-          pip install poetry
-      - name: Install Dependencies
-        working-directory: ./pipelines/${{ matrix.pipeline }}
-        run: |
-          poetry install --with test
-      - name: Run Integration Tests
-        working-directory: ./pipelines/${{ matrix.pipeline }}
-        run: |
-          poetry run pytest tests/integration/ -v
-        env:
-          PYTHONPATH: ./src
-
   build-and-deploy-dev:
     runs-on: ubuntu-latest
-    needs: [test-unit, test-integration]
+    needs: [test-unit]
     strategy:
       matrix:
         pipeline: ["geospatial-pipeline"]
